fix: temporal line dark mode issue

--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -272,7 +272,6 @@
 .temporal {
   width: 20px;
   height: auto;
-  background-color: $white;
 }
 
 .temporal-line {
